--- a/Css/style.css
+++ b/Css/style.css
@@ -9,12 +9,13 @@ body {
 }
 
 /* ------------------
-    Main CSS Start
+    Common CSS Start
 ------------------ */
 
 
 header,
 main,
+figure,
 footer {
     display: flex;
     flex-direction: column;
@@ -25,6 +26,10 @@ footer {
 
     width: 1160px;
 }
+
+/* ------------------
+    Banner CSS Start
+------------------ */
 
 
 .banner {
@@ -60,17 +65,6 @@ footer {
 
 }
 
-.live_btn a {
-
-    padding: 10px 24px;
-    color: #ffffff;
-}
-
-
-#players_part {
-
-    margin-top: 70px;
-}
 
 .banner_img img {
 
@@ -79,6 +73,35 @@ footer {
     margin: 153px 10px 86px 0;
 }
 
+
+.live_btn:hover a {
+
+    background: #151154;
+    border: 5px solid hotpink;
+}
+
+.live_btn a {
+
+    padding: 10px 24px;
+    color: #ffffff;
+    border-radius: 10px;
+    border: 5px solid transparent;
+    transition: 0.5s;
+}
+
+/* ------------------
+    Banner CSS End
+------------------ */
+
+/* ------------------
+    Player CSS Start
+------------------ */
+
+
+#players_part {
+
+    margin-top: 70px;
+}
 
 .players {
 
@@ -92,6 +115,21 @@ footer {
 
     padding: 15px;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
+    transition: all 0.5s;
+}
+
+
+.player:hover img {
+
+    transform: scale(1.3);
+    transition: all 0.5s;
+
+
+}
+
+.player_img {
+
+    overflow: hidden;
 }
 
 .player_img img {
@@ -118,6 +156,98 @@ footer {
 
 }
 
+/* ------------------
+    Player CSS End
+------------------ */
+
+.section_tittle {
+
+    font-size: 54px;
+    font-weight: 600;
+    margin: 30px 0;
+    color: #173562;
+    margin: 70px 0;
+}
+
+/* ------------------
+
+     Groups CSS Start
+
+------------------ */
+
+.groups {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+    margin-bottom: 70px;
+}
+
+.group {
+
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+    margin-left: 50px;
+    padding: 30px;
+    border-radius: 20px;
+}
+
+.group h2 {
+
+    font-size: 45px;
+    font-weight: 600;
+    color: #969696;
+    padding-bottom: 30px;
+}
+
+.team_img {
+
+    display: flex;
+}
+
+.team_img img {
+
+    width: 85px;
+    height: 85px;
+}
+
+/* ------------------
+    Groups CSS End
+------------------ */
+
+/* ------------------
+    Sponsor Part CSS Start
+------------------ */
+
+#sponsor {
+
+    margin-top: 50px;
+}
+
+#sponsor h1 {
+
+    text-align: center;
+    font-size: 45px;
+    margin-top: 20px;
+}
+
+.sponsor_img {
+    display: flex;
+    justify-content: center;
+}
+
+.sponsor_img img {
+
+    padding-right: 30px;
+    padding-bottom: 50px;
+}
+
+/* ------------------
+    Sponsor Part CSS End
+------------------ */
+
+/* ------------------
+    Footer Part CSS Start
+------------------ */
 
 .footer_part {
 
@@ -125,7 +255,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 165px;
+    margin-top: 150px;
     margin-bottom: 65px;
 }
 
@@ -150,4 +280,70 @@ footer {
     font-size: 18px;
     line-height: 34px;
     letter-spacing: 1px;
+}
+
+/* ------------------
+    Footer part CSS End
+------------------ */
+
+/* ------------------------------------------------------
+
+            Normal Desktop Css End
+
+ -------------------------------------------------------  */
+
+@media only screen and (max-width:688px) {
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
+
+    .banner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .banner_caption {
+        width: 3800px;
+        height: 100%;
+        margin-top: 20px;
+        padding-top: 10px;
+
+    }
+
+    .players {
+
+        background-color: red;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0px;
+        text-align: center;
+    }
+
+    .player_img {
+
+        overflow: visible;
+    }
+
+    .player_img img {
+
+        width: 100%;
+        height: 100%;
+
+    }
+
+    #group_part {
+
+        background-color: red;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    #players_part,
+    #sponsor,
+    .footer_part {
+
+        display: none;
+    }
 }
