--- a/Css/style.css
+++ b/Css/style.css
@@ -31,6 +31,11 @@ footer {
     Banner CSS Start
 ------------------ */
 
+header {
+
+    background-image: url(../images/Background/background.jpg);
+}
+
 
 .banner {
 
