--- a/Css/style.css
+++ b/Css/style.css
@@ -297,6 +297,12 @@ header {
 
  -------------------------------------------------------  */
 
+/*----------------------------------------------------------- 
+ 
+                Mobile Mode Responsive Css
+
+--------------------------------------------------------------*/
+
 @media only screen and (max-width:688px) {
 
 
@@ -371,6 +377,13 @@ header {
         width: 98%;
     }
 }
+
+
+/* -----------------------------------------------------------
+
+                Tablet Mode Responsive Css
+                
+------------------------------------------------------------ */
 
 @media only screen and (min-width:689px) and (max-width:992px) {
 
